button_event_listener

--- a/extension_website/popup.html
+++ b/extension_website/popup.html
@@ -1,22 +1,16 @@
+<!-- popup.html (Popup HTML) -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Catalog Extension Popup</title>
-    <!-- Add your CSS styles here -->
-    <link rel="stylesheet" href="styles.css">
+    <title>Popup</title>
+    <script src="popup.js"></script>
 </head>
 
 <body>
-    <div class="popup-container">
-        <h1>Welcome to the Course Catalog Extension!</h1>
-        <p>This is a sample popup page for your extension.</p>
-        <button id="close-popup">Close Popup</button>
-    </div>
-    <!-- Add your JavaScript code here -->
-    <script src="popup.js"></script>
+    <div id="popup-content">Content from the webpage will appear here.</div>
 </body>
 
 </html>
