--- a/extension_website/popup.html
+++ b/extension_website/popup.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fancy Popup</title>
     <link rel="stylesheet" href="..\node_modules\vis\dist\vis.css">
-    <script src="..\node_modules\vis\dist\vis.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="popup.js"></script>
     <script src="network_init.js"></script> <!-- Include the external JavaScript file -->
