--- a/extension_website/popup.html
+++ b/extension_website/popup.html
@@ -12,6 +12,9 @@
 
 <body>
     <div class="container">
+        <center>
+            <h1>Prerequisite Network Portal</h1>
+        </center>
         <div id="network"></div>
     </div>
     <script type="text/javascript" src="vis.js"></script>
