--- a/extension_website/popup.html
+++ b/extension_website/popup.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fancy Popup</title>
-    <!-- <link rel="stylesheet" href="..\node_modules\vis\dist\vis.css"> -->
+    <title>Prerequisite Network Portal</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Ensure vis.js is included before scraper_output.js and popup.js -->
+    <script type="text/javascript" src="vis.js"></script>
+    <script src="scraper_output.js"></script>
     <script src="popup.js"></script>
 </head>
-
 <body>
     <div class="container">
         <center>
@@ -17,8 +17,5 @@
         </center>
         <div id="network"></div>
     </div>
-    <script type="text/javascript" src="vis.js"></script>
-    <script src="network_init.js"></script> <!-- Include the external JavaScript file -->
 </body>
-
 </html>
